# eppd

./: .gitignore  README.md  pyproject.toml
eppd/: __init__.py  config.py  eppd.toml  logger.py  utils.py
eppd/core/: __init__.py  eidx.py  idfpd.py  outputs.py  parser.py  writer.py
eppd/data/: sch.idf
eppd/postprocess/: __init__.py  esopd.py  xmlpd.py
eppd/simulation/: __init__.py  batch.py  parametric.py  runner.py
eppd/systems/: __init__.py  airloop.py  centralplant.py  createsys.py  dhw.py  idfstatics.py  zonesys.py
examples/: createsys_demo.py  parametric_demo.py  simple_demo.py
examples/refbld/: RefBldgMediumOfficeNew2004_Chicago.idf  RefBldgMediumOfficeNew2004_Chicago_mod.idf  RefBldgSmallHotelNew2004_Chicago.idf  smallhotel.csv  tb.idf
skills/eppd-modeler/: SKILL.md
skills/eppd-modeler/references/: eidx-members.md  examples.md  hvac-systems.md
skills/eppd-modeler/scripts/: case_template.py
